# LinkedIn-post-generator

./: docker-compose.yml  readme.md
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  vercel.json
backend/app/: agent.py  img_gen.py  models.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ImageGenerator.tsx  Loader.tsx  PostCard.tsx  PostInputForm.tsx  Toast.tsx
