[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi",
	"uvicorn[standard]",
	"pydantic",
	"langchain",
	"langgraph",
	"google-generativeai",
	"aiohttp",
	"langchain-google-genai>=2.0.10",
]
