[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi",
	"uvicorn[standard]",
	"pydantic",
	"langchain",
	"langgraph",
	"google-generativeai",
	"aiohttp",
	"langchain-google-genai>=2.0.10",
	"langchain-community>=0.3.29",
	"python-dotenv>=1.1.1",
	"pillow>=11.3.0",
	"google-genai>=1.32.0",
]

[dependency-groups]
dev = [
    "uvicorn>=0.35.0",
]
